--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,21 @@
+@font-face {
+    font-family: Arco;
+    src: url(/font/ARCO.ttf);
+}
 html, body {
     margin: 0;
     padding: 0;
+    font-family: Arco;
 }
 
 body {
-    background-color:#66064b;
-    /* background-image: url("/img/pumpkin.png");
-    background-size: 200px, 1000px;  
-    background-image: url("/img/Bullet-enemy.png"); 
-    background-image:  url("/img/pumpkin.png"), url("/img/Bullet-enemy.png");
-    background-repeat: round, round; */
-    
+    /* background-color:#66064b; */
+    background-image: url('/img/Bg_page.jpg');
 
 
+}
+div {
+    text-align: center;
 }
 
 #logo{
@@ -20,29 +23,23 @@ body {
     margin-top: 80px;
     position: relative;
 }
-/* #score{
-    
-    color:red;
-    
-
-} */
 
 canvas {
+    background-image: url('/img/Bg_portada.jpg');
     border: 5px solid rgb(0, 0, 0);
     margin: -100px auto 0 auto;
     display: block;
+    /* font-family: Kid_Games; */
 }
 
-div {
-    text-align: center;
-}
+
 
 
 #btn{
     width: 100px;
     border: 5px solid rgb(0, 0, 0);
     background-color: #00c629;
-    color: #4a2240;
+    color: black;
     /* margin-top: -500px;  */
     padding: 10px 20px;
     font-weight: bold;
