--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,7 @@ canvas {
     border: 5px solid rgb(0, 0, 0);
     margin: -100px auto 0 auto;
     display: block;
-    /* font-family: Kid_Games; */
+
 }
 
 
@@ -46,4 +46,18 @@ canvas {
     letter-spacing: 2px;
     margin: -30px auto 0 auto;
     position: relative;  
+}
+
+#btn-restart{
+    display: none;
+    width: 100px;
+    border: 5px solid rgb(0, 0, 0);
+    background-color: #00c629;
+    color: black;
+    /* margin-top: -500px;  */
+    padding: 10px 20px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin: -49px auto 0 auto;
+    position: relative; 
 }
